# django-boilerplate

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/conf/settings/: base.py
