[project]
name = "django-boilerplate"
version = "0.1.0"
description = "A basic Django boilerplate project"
requires-python = ">=3.8"
dependencies = [
    "asgiref>=3.8.1",
    "attrs>=25.3.0",
    "better-profanity>=0.7.0",
    "black>=24.8.0",
    "boto3>=1.37.38",
    "botocore>=1.37.38",
    "celery~=5.4.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "click>=8.1.8",
    "django>=4.2.21",
    "django-cors-headers>=4.4.0",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-hosts>=6.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "freezegun>=1.5.1",
    "google-auth>=2.40.2",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "inflection>=0.5.1",
    "jmespath>=1.0.1",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2023.12.1",
    "mypy-extensions>=1.1.0",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.6",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "referencing>=0.35.1",
    "requests>=2.32.3",
    "rpds-py>=0.20.1",
    "s3transfer>=0.11.5",
    "sentry-sdk>=2.29.1",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.13.2",
    "uritemplate>=4.1.1",
    "urllib3>=1.26.20",
    "uuid7>=0.1.0",
    "whitenoise>=6.7.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
extend-exclude = '''
/(
    migrations
|   static
|   templates
|   venv
|   \.venv
|   env
)/
'''

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "conf.settings.local"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "django-stubs>=5.1.3",
    "djangorestframework-stubs>=3.15.1",
    "extended-mypy-django-plugin>=0.7.2",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "conf.settings.local"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true
